
 - Fix for bug 31191: Fixed erroneous permission check.

* 2014-02-25 - thorben.betten@open-xchange.com

 - Fix for bug 31252: Put error arguments into "error_params" field for compatibility reasons
 - Fix for bug 31287: Do not apply black-list on provisioning calls
 - Fix for bug 30969: Fully leverage from folder cache within folder layer, do not use a custom one in IMAP bundle

* 2014-02-24 - thorben.betten@open-xchange.com

 - Fix for bug 31264: Added cache invalidator to capabilities caches
 - Fix for bug 31152: Do not throw EmiG-specific error codes, but just mark as non-EmiG capable

* 2014-02-24 - marcus.klein@open-xchange.com

 - Fix for bug 31238: Use the same properties map for the general login method of the LoginPerformer and the AuthenticationService.

* 2014-02-21 - marcus.klein@open-xchange.com

 - Fix for bug 30761: Do not occupy a database connection without using it.

* 2014-02-20 - thorben.betten@open-xchange.com

 - Fix for bug 30138: Ensure each probe for root subfolder capability is exclusively performed

* 2014-02-18 - thorben.betten@open-xchange.com

 - Fix for bug 31086: Ignore failed attempt to save non-existent setting

* 2014-02-18 - martin.herfurth@open-xchange.com

 - Fix for bug 31185: Avoid Autoconfig cache from storing personal data.

* 2014-02-17 - thorben.betten@open-xchange.com

 - Fix for bug 31110: Proper re-initialize POP3 server's capabilities of successful authentication

* 2014-02-14 - tobias.friedrich@open-xchange.com

 - Fix for bug 31106: Parse allowed units for bandwidth parameters as described in property file

* 2014-02-11 - tobias.friedrich@open-xchange.com

 - Fix for bug 30966: Don't validate e-mail addresses of distribution list members when loading from the database

* 2014-02-10 - thorben.betten@open-xchange.com

 - Fix for bug 31039: Perform a move to trash through a RENAME command on associated IMAP folder

* 2014-02-07 - thorben.betten@open-xchange.com
