@@ -8,6 +8,10 @@
  - Fix for bug 31287: Do not apply black-list on provisioning calls
  - Fix for bug 30969: Fully leverage from folder cache within folder layer, do not use a custom one in IMAP bundle
 
+* 2014-02-24 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 31249: Be aware of infostore items without files when filtering, set appropriate HTTP status in download response
+ 
 * 2014-02-24 - thorben.betten@open-xchange.com
 
  - Fix for bug 31264: Added cache invalidator to capabilities caches
@@ -24,6 +28,10 @@
 * 2014-02-20 - thorben.betten@open-xchange.com
 
  - Fix for bug 30138: Ensure each probe for root subfolder capability is exclusively performed
+
+* 2014-02-19 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 31199: Process multicast results from GCM
 
 * 2014-02-18 - thorben.betten@open-xchange.com
 
